# ml-from-scratch

./: .gitignore  0_data_analysis.ipynb  1_knn_kmeans.ipynb  README.md  pyproject.toml
mls/: plotting.py
